--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
+    "test": "ts-mocha tests/**/*.ts",
     "start": "ts-node src/index.ts",
     "clean": "rm -rf dist"
   },
@@ -13,8 +14,14 @@
     "@solana/web3.js": "^1.98.0"
   },
   "devDependencies": {
+    "@types/expect": "^1.20.4",
+    "@types/mocha": "^10.0.10",
     "@types/node": "^20.11.19",
+    "expect": "^29.7.0",
+    "mocha": "^11.1.0",
+    "ts-mocha": "^11.1.0",
     "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.3.3"
   },
   "engines": {
