--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,14 @@
 {
   "compilerOptions": {
-    "target": "es2020",
-    "module": "commonjs",
-    "lib": ["es2020"],
-    "strict": true,
+    "target": "es2022",
     "esModuleInterop": true,
     "skipLibCheck": true,
     "resolveJsonModule": true,
+
+    "module": "NodeNext",
     "outDir": "./dist",
-    "rootDir": "./src",
+
+    "lib": ["es2020"],
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist"]
 }
